# KeyTrace-Lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
keytrace_lab/: __init__.py  __main__.py  consent.py  controls.py  logger.py  main.py
lab_logs/: .gitkeep
tests/: test_consent.py  test_controls.py  test_logger.py
