[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keytrace-lab"
version = "0.1.0"
description = "Local-only educational keyboard-event logger for malware-analysis learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "education", "malware-analysis", "keylogger", "lab"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
keytrace-lab = "keytrace_lab.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["keytrace_lab*"]
